--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "f3d0rov",
   "license": "MIT",
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@types/jest": "^29.5.14",
+    "@web/test-runner": "^0.19.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^25.0.1",
