--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.10",
+    "buffer": "^6.0.3",
     "chai": "^5.1.2",
     "mocha": "^11.0.1",
     "process": "^0.11.10",
