--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -3,8 +3,6 @@ name: NodeJS with Webpack
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -26,3 +24,19 @@ jobs:
       run: |
         npm install
         npm run build
+    
+    - name: Upload static files
+      uses: actions/upload-pages-artifact
+      with:
+        path: web/
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
