--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -34,8 +34,15 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    
     runs-on: ubuntu-latest
     needs: build
+
+    permissions:
+      id-token: write
+      pages: write
+      deployments: write
+
     steps:
     - name: Deploy to GitHub Pages
       id: deployment
