--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@types/mocha": "^10.0.10",
     "buffer": "^6.0.3",
     "chai": "^5.1.2",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-firefox-launcher": "^2.1.3",
+    "karma-mocha": "^2.0.1",
     "mocha": "^11.0.1",
     "process": "^0.11.10",
     "tsx": "^4.19.2",
