--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install Chrome to run tests
       uses: browser-actions/setup-chrome@v1
       with:
-        install-dependencies: true
+        # install-dependencies: true
         install-chromedriver: true
     
     - name: Log Chrome version
