use karma spec reporter

--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "typescript": "^5.7.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "karma-spec-reporter": "^0.0.36"
   }
 }
