--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Build
       run: |
         npm install
-        npm run build
+        npm run build-prod
     
     - name: Test
       run: |
