--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Build
       run: |
         npm install
-        npm run build
+        npm run build-prod
     
     - name: Test
       run: |
